      use "B" or :buffers instead
    * IMPORTANT: input fields are not blured anymore by default after a page has loaded
      use :set [no]focuscontent to control the behavior (thanks Paul Sobey for the 
      generous donation which made this behavior possible)
    * IMPORTANT: ctrl-x/a never take possible negative URLs into account, it was just
      too unpredictable
    * new "l" flag for 'complete' to reuse the Firefox awesome bar for getting better
      completions for :open. Works only when 'wildoptions' contains "auto"
    * new wildoptions=auto option (default off for now), to automatically list
      completions without the need to press the tab key
    * new argument parser for ex commands, should tell better error messages when
      you do things like :bmark -tag=a,b instead of :bmark -tags=a,b
    * some option values can be tab-completed now; e.g., :set wim=<tab>
    * :bdelete accepts an optional argument now
    * renamed some :autocmd, mainly BrowserStartup -> Startup and BrowserExit -> Quit
    * don't pass any ctrl- or alt- prefixed keys to firefox in insert mode
    * keywords in :open <arg> have higher priority than local files now
    * add :set online to control the "work offline" menu item
    * many small bug fixes

2008-06-03:
    * version 1.1
    * IMPORTANT: security update for suggest engines
    * try to add .exe automatically to filenames on windows, so :set editor=gvim -f
      will automatically invoke gvim.exe (if it's in the path). Thanks to
      Guido Van Hoecke
    * readded visualbellstyle (thanks mauke)
    * new popups=4 option
    * many bug fixes as usual

2008-05-14:
    * version 1.0
    * THIS VERSION ONLY WORKS WITH FIREFOX 3.0 beta3 or newer
    * IMPORTANT: Major hints rewrite
      read up the new help for the f, F and ; commands for details
      removed the following hint options: 'hintchars' 'maxhints'
      added the following hint options: 'hinttimeout', 'hintmatching', 'wordseperators'