@@ -2,6 +2,10 @@
 <b>Note:</b> If you don't wish to appear on this list when making a donation, please tell me.
 
 2008:
+* Brian Clark
+* Gavin Gilmour
+* Sivaraj Doddannan 
+* Michael Hrabanek 
 * Nigel McNie
 * Ben Damm
 * Anton Kovalenko
