@@ -14,13 +14,12 @@ BUGS:
 - http://www.maximonline.com/jokes/ - the prev and next buttons on the image map are not hinted
 - ;f seems broken after a page load
 - ;s saves the page rather than the image
+- :set! browser.urlbar.clickSelectsAll=true -> clicking in the location bar unfocuses it immediately
 
 FEATURES:
 8 middleclick in content == p, and if command line is open, paste there the clipboard buffer
-8 add more autocommands (BrowserStart, TabClose, TabOpen, TabChanged, LocationChanged, any more?)
 8 ;?<hint> should show more information
 8 all search commands should start searching from the top of the visible viewport 
-8 :bdelete full_url<cr> and :bdelete! filter<cr> should delete all tabs matching filter or full_url
 7 adaptive learning for tab-completions
   (https://bugzilla.mozilla.org/show_bug.cgi?id=395739 could help)
 7 use ctrl-n/p in insert mode for word completion
@@ -33,8 +32,7 @@ FEATURES:
   google to another page and click 10 links there, [d would take me back to the google page
   opera's fast forward does something like this
 7 make an option to disable session saving by default when you close Firefox
-6 :set [no]focuscontent
-6 :set! browser.zoom.siteSpecific  by default?
+6 add more autocommands (TabClose, TabOpen, TabChanged, any more?)
 6 jump to the next heading with ]h, next image ]i, previous textbox [t and so on
 6 :grep support (needs location list)
 6 use '' to jump between marks like vim
